[gd_scene load_steps=9 format=3 uid="uid://b3ch61msnptyv"]

[ext_resource type="Script" path="res://scenes/ui/game/item_card.gd" id="1_k02gh"]
[ext_resource type="Texture2D" uid="uid://b04u1vn7fwn8h" path="res://assets/textures/items/item_icon_wood.png" id="2_qo8yi"]
[ext_resource type="Texture2D" uid="uid://dlb43ccstig1" path="res://tress/ability/at_ability_gift_of_the_gods.tres" id="2_ub18j"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cvsxq"]
atlas = ExtResource("2_qo8yi")
region = Rect2(416, 576, 32, 32)

[sub_resource type="Animation" id="Animation_v52yr"]
resource_name = "Enter"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_bxtk1"]
resource_name = "Hover"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1)]
}

[sub_resource type="Animation" id="Animation_ac4nx"]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gc3lh"]
_data = {
"Enter": SubResource("Animation_v52yr"),
"Hover": SubResource("Animation_bxtk1"),
"RESET": SubResource("Animation_ac4nx")
}

[node name="ItemCard" type="Button"]
custom_minimum_size = Vector2(180, 260)
offset_right = 180.0
offset_bottom = 260.0
pivot_offset = Vector2(100, 130)
focus_mode = 0
flat = true
script = ExtResource("1_k02gh")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("AtlasTexture_cvsxq")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Icon" type="TextureRect" parent="VBox"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
mouse_filter = 2
texture = ExtResource("2_ub18j")
expand_mode = 1

[node name="Name" type="Label" parent="VBox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "道具名称"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gc3lh")
}

[node name="SoundPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
